fixed the background for content and footer stretch to 100% body but max-out the content to 1240

--- a/style.css
+++ b/style.css
@@ -228,21 +228,23 @@ a {
     tw-rounded-3xl;
   }
   .content {
-    @apply tw-max-w-screen-xl
-    tw-p-8
-    tw-bg-bg-secondary
+    @apply tw-flex tw-bg-bg-secondary
+    tw-items-center
+    tw-justify-center
     tw-w-full;
+    .content-container {
+      @apply tw-max-w-screen-xl
+      tw-w-full
+      tw-p-8;
+    }
   }
   .footer {
-    @apply tw-max-w-screen-xl
-    tw-flex-col
-    tw-gap-1
-    tw-border-t
+    @apply tw-border-t
     tw-border-border
     tw-bg-bg-tertiary
-    tw-p-4
     tw-flex
-    tw-w-full;
+    tw-w-full
+    tw-justify-center;
     .social {
       @apply tw-w-6
       tw-text-center;
@@ -250,6 +252,14 @@ a {
         @apply tw-m-auto
         tw-h-4;
       }
+    }
+    .footer-container {
+      @apply tw-max-w-screen-xl
+      tw-w-full
+      tw-flex-col
+      tw-gap-1
+      tw-p-4
+      tw-flex;
     }
     .right-links {
       @apply tw-flex
